<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/explanationConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <!--
    android:background="@drawable/overwrite_warning_fake"
    -->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="148dp"
        android:layout_height="138dp"
        app:layout_constraintBottom_toTopOf="@+id/MainWarning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/warningbig" />

    <TextView
        android:id="@+id/MainWarning"
        android:layout_width="461dp"
        android:layout_height="101dp"
        android:layout_marginTop="164dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center_horizontal"
        android:text="@string/a_map_is_already_saved_do_you_want_to_overwrite_it"
        android:textAllCaps="false"
        android:textColor="@color/blueText"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/SecondWarning"
        android:layout_width="546dp"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center_horizontal"
        android:text="@string/the_current_map_will_be_lost_permanently"
        android:textAllCaps="false"
        android:textColor="@color/blueText"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainWarning" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="652dp"
        android:layout_height="148dp"
        app:layout_constraintBottom_toTopOf="@+id/yesButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SecondWarning"
        app:srcCompat="@drawable/ic_overwrite" />

    <Button
        android:id="@+id/yesButton"
        android:layout_width="427dp"
        android:layout_height="87dp"
        android:background="@drawable/ic_explore_button"
        android:onClick="onConfirmOverwriteButtonClicked"
        android:text="@string/yes"
        android:textColor="@android:color/white"
        android:textSize="50sp"
        android:fontFamily="sans-serif-condensed-light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.893" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="143dp"
        android:layout_height="52dp"
        android:background="@drawable/ic_cancel_button"
        android:onClick="onCancelOverwriteButtonClicked"
        android:text="@string/cancel"
        android:textSize="25sp"
        android:textColor="@color/blueText"
        app:layout_constraintBottom_toBottomOf="@+id/yesButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.207"
        app:layout_constraintStart_toEndOf="@+id/yesButton"
        app:layout_constraintTop_toTopOf="@+id/yesButton"
        app:layout_constraintVertical_bias="0.531" />

</androidx.constraintlayout.widget.ConstraintLayout>